# c-utils

./: .gitignore  CMakeLists.txt  text.txt
include/hirzel/: array.h  file.h  smtp.h  table.h
include/hirzel/test/: array.h  table.h
include/hirzel/util/: array.h  file.h  list.h  table.h
src/test/: all.c  array.c  table.cpp  test_all.c  test_array.c  test_table.c
test/: impl.c  intlist.c  intlist.h  list.c  listi.c  main  main.c  test.bat  test.sh
